[package]
name = "rush"
version = "0.0.1"
authors = ["Kutaev <kirSM2010@gmail.com>"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rush_lib = { version = "0.0.1", path = "../rush_lib" }
rush_parser = { version = "0.0.1", path = "../rush_parser" }
rush_interactive = { version = "0.0.1", path = "../rush_interactive" }
rush_utils = { version = "0.0.1", path = "../rush_utils" }
rush_instructions = { version = "0.0.1", path = "../rush_instructions", features = ["rt_yaml"] }
clap = { version = "4.0.4", features = ["derive", "wrap_help"] } # cli arg parsing
colored = "2"     # for ansi colors
text_io = "0.1.8" # to read values in, w/out per line

[build-dependencies]
vergen = { version = "7.5.1", default-features = false, features = ["git"] } # for version info
