[package]
name = "rush_parser"
version = "0.0.1"
authors = ["Kutaev <kirSM2010@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7" # parser
nom_locate = "4"
serde = { version = "1.0", features = ["derive"] }
